updating Executor to use Virtual Threads